--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,9 +1,35 @@
-<ion-view view-title="Account">
-  <ion-content>
-    <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
-    </ion-list>
-  </ion-content>
-</ion-view>
+<body>
+
+<ion-header-bar class="bar bar-header bar-royal">
+  <h1 class="title">asdasdasd</h1>
+</ion-header-bar>
+
+<ion-content class="has-header">
+
+
+  <div class="bar bar-header item-input-inset">
+    <input type="text" id="query" ng-model="searchText"/>
+  </div>
+
+  <div class="row header">
+    <div class="col col-10">#</div>
+    <div class="col col-70">pblancId</div>
+    <div class="col col-70">공고명</div>
+    <div class="col col-20">완료여부</div>
+
+  </div>
+  <div ng-repeat="item in items" class="row" ng-repeat="data in items | searchText">
+    <div class="col col-10">{{ item.rn }}</div>
+    <div class="col col-10">{{ item.pblancId }}</div>
+    <div class="col" ng-show="false">{{ item.guidanceCn}}</div>
+    <div id="title" class="col col-70" ng-click="goDetail(item.pblancId)">{{ item.pblancNm }}</div>
+    <div class="col col-20" style="width: 20%">{{item.prgrStts}}</div>
+
+  </div>
+  <!--아이템이 있는 경우에만 스크롤링 함수를 호출한다.sdlfksdlfklsdkf-->
+  <ion-infinite-scroll ng-if="itemsAvailable" on-infinite="loadMore()" distance="10%"></ion-infinite-scroll>
+
+</ion-content>
+
+</body>
+
